kube/kube-ingress/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aftest-deployment
spec:
  replicas: 4
  revisionHistoryLimit: 6
  strategy:
    rollingUpdate:
      maxSurge: 2
      maxUnavailable: 2
  selector:
    matchLabels:
      app: aftestapp
  template:
    metadata:
      name: aftestapp-pod
      labels:
        app: aftestapp
    spec:
      containers:
        - name: aftestapp-container
          image: nginx:1.22.0
          lifecycle:
            postStart:
              exec:
                command: ["/bin/sh", "-c", "echo Hello from the postStart handler > /usr/share/message"]
            preStop:
              exec:
                command: ["/bin/sh","-c","nginx -s quit; while killall -0 nginx; do sleep 1; done"]
          readinessProbe:
            tcpSocket:
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "64Mi"
              cpu: "150m"
            limits:
              memory: "128Mi"
              cpu: "150m"
