kube/kube-ingress/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aftest-backend-service
  labels:
    app: aftestapp
    tier: backend
spec:
  type: ClusterIP
  selector:
    app: aftestapp
  ports:
    - port: 80
      targetPort: 80
